--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require": {
-        "php":              ">=5.3.2",
-        "doctrine/dbal":    ">=2.1, <2.3"
+        "php": ">=5.3.3",
+        "doctrine/dbal": "2.2.*"
     },
     "autoload": {
         "psr-0": {
